--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^1.0.1
   cloud_firestore: ^1.0.1
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
