--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   page_transition: "^1.1.7+6"
+  rflutter_alert: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
